--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
   - var title = "Card Organizer"
-  h1 #{title} hola folks
+  h1 #{title} hola folks this is some more text
   p Welcome to #{title}
