--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,8 @@ extends layout
 
 block content
   - var title = "Card Organizer"
-  h1 #{title} hola folks this is some more text
+  h1 #{title}
   p Welcome to #{title}
+
+  script.
+      alert("this is an alert")
